[package]
name = "ldtk_rust"
version = "0.5.0"
authors = ["Blake Ellis <blake@colormaria.com>"]
edition = "2018"
license = "MIT"
description = "Use the LDtk 2D level editor to build games in Rust."
homepage = "https://github.com/estivate/ldtk_rust"
documentation = "https://docs.rs/ldtk_rust/"
repository = "https://github.com/estivate/ldtk_rust"
readme = "README.md"
keywords = ["ldtk", "game", "gamedev", "map-editor"]
categories = ["games", "game-development"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
bevy = "0.5.0"
